--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "hridoy-ip",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "description": "hridoy-ip: A Node.js utility for seamless IP address detection and geolocation. Easily retrieve the client's IP address and gather geolocation details, all in one package. Simplify IP-based operations in your applications with hridoy-ip.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +26,7 @@
     "Geographical information"
   ],  
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "geoip-lite": "^1.4.7",
     "request-ip": "^3.3.0"
