--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hridoy-ip",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "hridoy-ip: A Node.js utility for seamless IP address detection and geolocation. Easily retrieve the client's IP address and gather geolocation details, all in one package. Simplify IP-based operations in your applications with hridoy-ip.",
   "main": "index.js",
   "type": "module",
@@ -30,5 +30,9 @@
   "dependencies": {
     "geoip-lite": "^1.4.7",
     "request-ip": "^3.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hridoyn75/hridoy-ip.git"
   }
 }
